[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/player.gd" type="Script" id=1]
[ext_resource path="res://character.tscn" type="PackedScene" id=2]

[node name="player" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.50274, 0 )
script = ExtResource( 1 )

[node name="head" type="Spatial" parent="."]

[node name="tpv" type="Camera" parent="head"]
transform = Transform( 1, 0, 0, 0, 0.958606, 0.284735, 0, -0.284735, 0.958606, 0, 1.381, 3.22 )

[node name="character" parent="." instance=ExtResource( 2 )]

[node name="armhook" type="Position3D" parent="character"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.721224, -0.386238 )

[node name="armclimbL" type="RayCast" parent="character/armhook"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -0.1, 0.2 )
enabled = true
cast_to = Vector3( 0, 0, -0.4 )

[node name="armclimbR" type="RayCast" parent="character/armhook"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -0.1, 0.2 )
enabled = true
cast_to = Vector3( 0, 0, -0.4 )

[node name="climb2" type="RayCast" parent="character"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.314461 )
enabled = true
cast_to = Vector3( 0, 0, -1 )

[node name="climb1" type="RayCast" parent="character"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.853106, -0.720601 )
enabled = true

[node name="ground" type="RayCast" parent="character"]
enabled = true
cast_to = Vector3( 0, -2, 0 )
